# gemini-ui-navigator-agent

./: .dockerignore  .gcloudignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: cleanup.sh  deploy.sh
docs/: architecture.md
public/: index.html
src/: config.py  main.py
src/agents/: navigator.py
src/tools/: browser_tools.py
